--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 	<!--Header-->
-	<header class="header flex">
+	<header class="header flex spaced">
 		<h1 class="header_name">Poștașu'</h1>
 		<aside class="header_element flex">
 			<span class="header_element1">Poștașu' is a Romanian daily newspaper.</span>
@@ -31,39 +31,39 @@
 		<!--Navigation-->
 		<nav class="navigation_main flex">
 
-			<img class="navigation_logo" src="./assets/logo_200x200 (2).png" alt="logo_200x200">
+			<img src="./assets/mylogo.png" alt="mylogo">
 
-			<ul class="navigation_list flex spaced">
-				<li class="list_item active">
+			<ul class="flex spaced">
+				<li>
 					<a href="#">News</a>
 				</li>
-				<li class="list_item">
+				<li>
 					<a href="#">Opinion</a>
 				</li>
-				<li class="list_item">
+				<li>
 					<a href="#">Sport</a>
 				</li>
-				<li class="list_item">
+				<li>
 					<a href="#">Culture</a>
 				</li>
-				<li class="list_item">
+				<li>
 					<a href="#">Lifestyle</a>
 				</li>
-				<li class="list_item">
+				<li>
 					<a href="#">More</a>
 				</li>
 			</ul>
 
-			<form class="navigation_search">
-				<input class="search_item" type="search">
-				<button class="search_item pointer" type="submit">Search</button>
+			<form>
+				<input class="search_box" type="search">
+				<button class="search_box search_button" type="submit">Search</button>
 			</form>
 
-			<select class="navigation_language">
-				<option class="navigation_language">EN</option>
-				<option class="navigation_language">RO</option>
-				<option class="navigation_language">DE</option>
-				<option class="navigation_language">FR</option>
+			<select>
+				<option>EN</option>
+				<option>RO</option>
+				<option>DE</option>
+				<option>FR</option>
 			</select>
 
 			<a href="#">Account</a>
@@ -72,99 +72,178 @@
 
 
 		<!--Headlines-->
-		<div class="headlines_upper flex">
+		<div class="headlines_up flex">
 			<h2 class="headlines_title">Headlines</h2>
 			<span class="line"></span>
 			<a class="view-all" href="#">View all</a>
 		</div>
 
-		<div class="headlines_articles flex">
+		<div class="flex">
 			<article class="headlines_article-1 flex">
 				<a href="#">Do your children have a passion for space? Discover the ESA Kids app</a>
 				<!-- <span class="date">05/03/2023</span> -->
 			</article>
 
-			<div class="headlines_articles-2-3-4">
-				<article class="headlines-article-individual">
+			<section class="headlines_articles-2-3-4 flex">
+				<article>
 					<a href="#">13 Legitimately Awesome Environment Products to Buy Right Now</a>
 					<span class="date">05/03/2023</span>
 				</article>
-				<article class="headlines-article-individual">
+				<article>
 					<a href="#">The Most Entertaining Nature Influencers You Need to Follow</a>
 					<span class="date">05/03/2023</span>
 				</article>
-				<article class="headlines-article-individual">
+				<article>
 					<a href="#">What the Future of Oceans Work Looks Like After Coronavirus</a>
 					<span class="date">05/03/2023</span>
 				</article>
-			</div>
+			</section>
 		</div>
 
 
 		<!--Opinion-->
-		<main class="opinion_upper flex">
+		<main class="opinion_up flex">
 			<h2 class="headlines_title">Opinion</h2>
 			<span class="line"></span>
 			<a class="view-all" href="#">View all</a>
 		</main>
 
-		<main class="opinion flex">
-			<article class="opinion_article" >
-				<img class="picture" src="./assets/elephants-640.jpg" alt="elephants">
-				<h2 class="opinion_article-author">Keanu Craig</h2>
-				<a class="opinion_article-link" href="#">"The Most Powerful People in the World of Elephants All Have Traits in Common"</a>
+		<main class="opinion_main flex">
+			<article>
+				<img src="./assets/elephants.jpg" alt="elephants">
+				<h2>Keanu Craig</h2>
+				<a href="#">"The Most Powerful People in the World of Elephants All Have Traits in Common"</a>
 				<span class="date">05/03/2023</span>
 			</article>
 			<article class="opinion_article-2">
-				<img class="picture" src="./assets/sea-640.jpg" alt="sea">
-				<h2 class="opinion_article-author">Gloria Douglas</h2>
-				<a class="opinion_article-link" href="#">"What the Government Doesn't Want You to Know About Beach"</a>
+				<img src="./assets/sea.jpg" alt="sea">
+				<h2>Gloria Douglas</h2>
+				<a href="#">"What the Government Doesn't Want You to Know About Beach"</a>
 				<span class="date">05/03/2023</span>
 			</article>
-			<article class="opinion_article">
-				<img class="picture" src="./assets/cattle-640.jpg" alt="cattle">
-				<h2 class="opinion_article-author">Tomas Connor</h2>
-				<a class="opinion_article-link" href="#">"We Underestimate Global Trends That Will Affect Highland Cows in 2023"</a>
+			<article>
+				<img src="./assets/cattle.jpg" alt="cattle">
+				<h2>Tomas Connor</h2>
+				<a href="#">"We Underestimate Global Trends That Will Affect Highland Cows in 2023"</a>
 				<span class="date">05/03/2023</span>
 			</article>
 		</main>
 
 
-
 		<!--Culture-->
-		<main class="opinion_upper flex">
+		<main class="opinion_up flex">
 			<h2 class="headlines_title">Culture</h2>
 			<span class="line"></span>
 			<a class="view-all" href="#">View all</a>
 		</main>
 
-		<div class="headlines_articles flex">
+		<main class="headlines_articles culture flex">
 			<article class="culture_article-1">
-				<img src="./assets/forest-640.jpg" alt="forest">
-				<a class="culture_forest-link" href="#">10 Incredible Hiking Products You’ll Wish You Discovered Sooner</a>
+				<img src="./assets/forest.jpg" alt="forest">
+				<a class="culture_link" href="#">10 Incredible Hiking Products You’ll Wish You Discovered Sooner</a>
 				<span class="date">05/03/2023</span>
 			</article>
-			<div class="culture_articles-2-3 flex">
-				<article>
-					<img src="./assets/iceland-640.jpg" alt="iceland">
-					<a class="culture_forest-link" href="#">Few people know just how beautiful Iceland really is</a>
+			<section class="flex">
+				<article class="culture_articles-2-3">
+					<img src="./assets/iceland.jpg" alt="iceland">
+					<a class="culture_link" href="#">Few people know just how beautiful Iceland really is</a>
 					<span class="date">05/03/2023</span>
 				</article>
-				<article>
-					<img src="./assets/water-640.jpg" alt="water">
-					<a class="culture_forest-link" href="#">Where did the word "water" originate from?</a>
+				<article class="culture_articles-2-3">
+					<img src="./assets/water.jpg" alt="water">
+					<a class="culture_link" href="#">Where did the word "water" originate from?</a>
 					<span class="date">05/03/2023</span>
 				</article>
-			</div>
-		</div>
+			</section>
+		</main>
+
+
+		<!--Footer-->
+		<footer class="footer_main flex">
+			<footer class="footer_column">
+				<img src="./assets/mylogo.png" alt="mylogo">
+				<ul class="footer_list flex">
+					<li>
+						<a class="view-all" href="#">Subscribe</a>
+					</li>
+					<li>
+						<a class="view-all" href="#">Contribute</a>
+					</li>
+				</ul>
+			</footer>
+			<footer class="footer_column">
+				<ul class="flex">
+					<li>
+						<a href="#">Contact us</a>
+					</li>
+					<li>
+						<a href="#">Complaints & corrections</a>
+					</li>
+					<li>
+						<a href="#">SecureDrop</a>
+					</li>
+					<li>
+						<a href="#">Work for us</a>
+					</li>
+					<li class="li_top-margin">
+						<a href="#">Privacy settings</a>
+					</li>
+					<li>
+						<a href="#">Privacy policy</a>
+					</li>
+					<li>
+						<a href="#">Cookie policy</a>
+					</li>
+					<li>
+						<a href="#">Terms & conditions</a>
+					</li>
+					<li>
+						<a href="#">Help</a>
+					</li>
+					<li>
+						<a href="#">Advertise with us</a>
+					</li>
+				</ul>
+			</footer>
+			<footer class="footer_column">
+				<ul class="flex">
+					<li>
+						<a href="#">All topics</a>
+					</li>
+					<li>
+						<a href="#">All writers</a>
+					</li>
+					<li>
+						<a href="#">Digital newspaper archive</a>
+					</li>
+					<li class="li_top-margin">
+						<a href="#">Facebook</a>
+					</li>
+					<li>
+						<a href="#">YouTube</a>
+					</li>
+					<li>
+						<a href="#">Instagram</a>
+					</li>
+					<li>
+						<a href="#">Linkedin</a>
+					</li>
+					<li>
+						<a href="#">Twitter</a>
+					</li>
+					<li>
+						<a href="#">Newsletters</a>
+					</li>
+					<li class="li_top-margin">
+						<a href="#">Search jobs</a>
+					</li>
+				</ul>
+			</footer>
+
+		</footer>
 
 
 
-
-
-
-
-		<br><br><br><br><br><br>
 	</div>
 </body>
 
