Breakpoint (max-width: 40rem) added

--- a/index.html
+++ b/index.html
@@ -54,19 +54,21 @@
 				</li>
 			</ul>
 
-			<form>
-				<input class="search_box" type="search">
-				<button class="search_box search_button" type="submit">Search</button>
-			</form>
+			<nav class="navigation_right flex spaced">
+				<form>
+					<input class="search_box" type="search">
+					<button class="search_box search_button" type="submit">Search</button>
+				</form>
 
-			<select>
-				<option>EN</option>
-				<option>RO</option>
-				<option>DE</option>
-				<option>FR</option>
-			</select>
+				<select>
+					<option>EN</option>
+					<option>RO</option>
+					<option>DE</option>
+					<option>FR</option>
+				</select>
 
-			<a href="#">Account</a>
+				<a href="#">Account</a>
+			</nav>
 
 		</nav>
 
@@ -109,7 +111,7 @@
 		</main>
 
 		<main class="opinion_main flex">
-			<article>
+			<article class="opinion_articles-1-3">
 				<img src="./assets/elephants.jpg" alt="elephants">
 				<h2>Keanu Craig</h2>
 				<a href="#">"The Most Powerful People in the World of Elephants All Have Traits in Common"</a>
@@ -121,7 +123,7 @@
 				<a href="#">"What the Government Doesn't Want You to Know About Beach"</a>
 				<span class="date">05/03/2023</span>
 			</article>
-			<article>
+			<article class="opinion_articles-1-3">
 				<img src="./assets/cattle.jpg" alt="cattle">
 				<h2>Tomas Connor</h2>
 				<a href="#">"We Underestimate Global Trends That Will Affect Highland Cows in 2023"</a>
@@ -239,9 +241,7 @@
 					</li>
 				</ul>
 			</footer>
-
 		</footer>
-
 
 
 	</div>
